--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
       </ul>
     </header>
     <section>
-      <form></form>
+      <div class="simon">
+        <div class="tittle">Simón Dice</div>
+        <button id="boton-comenzar">Jugar</button>
+        <div class="contenedor-botones">
+          <div class="cuadrado-rojo"></div>
+          <div class="cuadrado-azul"></div>
+          <div class="cuadrado-verde"></div>
+          <div class="cuadrado-amarillo"></div>
+        </div>
+      </div>
     </section>
     <footer></footer>
     <script src="js/main.js"></script>
