agrega estilo divs botones
se agrega un estilo para que los divs que van a actuar como botones del juego se parezcan

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     , initial-scale=1.0"
     />
     <title>Juego Simón Dice</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -23,10 +24,10 @@
         <div class="tittle">Simón Dice</div>
         <button id="boton-comenzar">Jugar</button>
         <div class="contenedor-botones">
-          <div class="cuadrado-rojo"></div>
-          <div class="cuadrado-azul"></div>
-          <div class="cuadrado-verde"></div>
-          <div class="cuadrado-amarillo"></div>
+          <div class="cuadrado rojo"></div>
+          <div class="cuadrado azul"></div>
+          <div class="cuadrado verde"></div>
+          <div class="cuadrado amarillo"></div>
         </div>
       </div>
     </section>
