--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </header>
     <section>
-      <div class="simon">
+      <div id="simon" class="simon">
         <div class="tittle">Simón Dice</div>
         <button id="boton-comenzar">Jugar</button>
         <div class="contenedor-botones">
