--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="tablero">
+        <div class="rondas"></div>
+      </div>
+    </section>
     <footer></footer>
     <script src="js/main.js"></script>
   </body>
