agrega boton html
boton que va a servir para que una vez que se pierde va a permitir reiniciar el juego

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="cuadrado azul"></div>
           <div class="cuadrado verde"></div>
           <div class="cuadrado amarillo"></div>
+          <button id="boton-volver-a-jugar" class="oculto">Volver a Jugar</button>
         </div>
       </div>
     </section>
