agrega estilo boton jugar
mejor presentacion final del juego

--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
   </head>
   <body>
     <header>
-      <ul>
-        <li>
-          <h1>Simón Dice</h1>
-        </li>
-      </ul>
+      <h1>Simón Dice</h1>
     </header>
     <section>
-      <div id="simon" class="simon">
-        <div class="tittle">Simón Dice</div>
-        <button id="boton-comenzar">Jugar</button>
+      <div id="simon" class="oculto">
         <div class="contenedor-botones">
           <div class="cuadrado rojo"></div>
           <div class="cuadrado azul"></div>
@@ -28,6 +22,10 @@
         </div>
       </div>
     </section>
+    <section>
+      <button id="boton-comenzar" class="boton-neon">Jugar</button>
+    </section>
+
     <section>
       <div class="tablero">
         <div class="rondas"></div>
