--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
           <div class="cuadrado azul"></div>
           <div class="cuadrado verde"></div>
           <div class="cuadrado amarillo"></div>
-          <button id="boton-volver-a-jugar" class="oculto">Volver a Jugar</button>
         </div>
       </div>
+    </section>
+    <section>
+      <button id="boton-volver-a-jugar" class="oculto">Volver a Jugar</button>
     </section>
     <section>
       <button id="boton-comenzar" class="boton-neon">Jugar</button>
     </section>
 
     <section>
-      <div class="tablero">
+      <div class="puntuacion">
+        <p class="oculto">LLegaste hasta la ronda:</p>
         <div class="rondas"></div>
       </div>
     </section>
