agrega sonido para los botones
se queria que los botones reproduzcan sonidos al ser activados y al reproducir la secuencia generada por el PC para que sea mas fácil recordar el patron

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section>
       <div id="simon" class="oculto">
         <div class="contenedor-botones">
-          <div class="cuadrado rojo"></div>
-          <div class="cuadrado azul"></div>
-          <div class="cuadrado verde"></div>
-          <div class="cuadrado amarillo"></div>
+          <div class="cuadrado rojo" id="rojo"></div>
+          <div class="cuadrado azul" id="azul"></div>
+          <div class="cuadrado verde" id="verde"></div>
+          <div class="cuadrado amarillo" id="amarillo"></div>
         </div>
       </div>
     </section>
@@ -40,5 +40,6 @@
     </section>
     <footer></footer>
     <script src="js/main.js"></script>
+    <script src="D:\COSAS\STUFF\UNSA\CURSO - ARGENTINA PROGRAMA\juego-simon-dice\juego-simon-dice\sonidos\simonSound1.mp3"></script>
   </body>
 </html>
