--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
     <header>
@@ -39,6 +39,6 @@
       <button id="boton-volver-a-jugar" class="oculto">Volver a Jugar</button>
     </section>
     <footer></footer>
-    <script src="js/main.js"></script>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
